--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,32 @@
 .signup-input {
     position: absolute;
     left: 50%;
-    top: 50%;
-    color: white;
+    top: 70%;
+    color: #924e4e;
+    transform: translate(-50%, -70%);
+}
+
+#about-logo {
+    /* height: 70%; */
+    width: 50vw;
+}
+
+#order {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+#order ul {
+    list-style: none;
+    margin: 35px 0;
+    font-size: 25px;
+}
+
+#order h1 {
+    font-size: 35px;
+    border-bottom: 1px solid black;
 }
