--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     position: absolute;
     left: 50%;
     top: 70%;
-    color: #924e4e;
+    color: white;
     transform: translate(-50%, -70%);
 }
 
